[gd_scene load_steps=8 format=3 uid="uid://cx8df2xm2muud"]

[ext_resource type="Script" path="res://scripts/player/player.gd" id="1_etjqj"]
[ext_resource type="Resource" uid="uid://cln71qaw0kpn" path="res://custom resources/tres/baseClass.tres" id="2_w7pa7"]
[ext_resource type="Script" path="res://player/playerStateMachine/stateManager.gd" id="3_nsn5b"]
[ext_resource type="PackedScene" uid="uid://bl66s6mq6lipx" path="res://player/base class/baseCharacter.tscn" id="4_g18nh"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_trh88"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_yh2bu"]
height = 1.69552

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e1rt1"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3

[node name="player" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
collision_layer = 2
floor_max_angle = 1.22173
script = ExtResource("1_etjqj")
humanClass = ExtResource("2_w7pa7")

[node name="standingCol" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_trh88")

[node name="crouchingCol" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.146232, 0)
shape = SubResource("CapsuleShape3D_yh2bu")
disabled = true

[node name="head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="offset" type="SpringArm3D" parent="head"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)
margin = 0.2

[node name="camSpring" type="SpringArm3D" parent="head/offset"]
transform = Transform3D(-4.37114e-08, -2.98023e-08, -1, 0, 1, -2.98023e-08, 1, 0, -4.37114e-08, 0, 0, 1)
spring_length = 2.0

[node name="Camera3D" type="Camera3D" parent="head/offset/camSpring"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2)

[node name="stateManager" type="Node3D" parent="."]
script = ExtResource("3_nsn5b")

[node name="crouchCheck" type="RayCast3D" parent="stateManager"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.7, 0)
target_position = Vector3(0, 0.3, 0)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
top_level = true
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -70.0
offset_right = 285.0
grow_vertical = 0
size_flags_vertical = 8
auto_translate = false
localize_numeral_system = false
tooltip_text = "showStates"
theme_override_styles/panel = SubResource("StyleBoxFlat_e1rt1")

[node name="stateInfo" type="RichTextLabel" parent="CanvasLayer/Panel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
bbcode_enabled = true
text = "[center]blanktext[/center]"
scroll_active = false

[node name="baseCharacter" parent="." instance=ExtResource("4_g18nh")]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, -0.98059, 0)
